Adjust category in .desktop file Education is the better category than Utility. https://bugs.debian.org/604612

--- a/data/gelemental.desktop.in
+++ b/data/gelemental.desktop.in
@@ -5,4 +5,4 @@ Exec=gelemental
 Icon=gelemental
 Terminal=false
 Type=Application
-Categories=GTK;Utility;Science;Chemistry;
+Categories=GTK;Education;Science;Chemistry;
